Forgot Page added AND The functionality also added

--- a/views/user/login.hbs
+++ b/views/user/login.hbs
@@ -10,7 +10,7 @@
       <form action="/login" method="post">
         <input type="text" placeholder="Enter your email" id="email" name="email" >
         <input type="password" placeholder="Enter your password" id="password" name="password">
-        <a href="#">Forgot password?</a>
+        <a href="/forgot">Forgot password?</a>
         <input type="submit" class="button" value="submit">
       </form>
       <div class="signup">
