--- a/views/user/forgotPassword.hbs
+++ b/views/user/forgotPassword.hbs
@@ -11,9 +11,9 @@
             <div class="panel panel-default">
               <div class="panel-body">
                 <div class="text-center ">
-                  <h3><i class="fa fa-lock fa-4x "></i></h3>
-                  <h2 class="text-center">Forgot Password?</h2>
-                  <p>You can reset your password here.</p>
+                  <h3 style="text-align: center;"><i class="fa fa-lock fa-4x "></i></h3>
+                  <h2 style="text-align: center;" class="text-center">Forgot Password?</h2>
+                  <p style="text-align: center;">You can reset your password here.</p>
                   <div class="panel-body">
     
                     <form id="register-form" action="/forgot" role="form" autocomplete="off" class="form" method="post">
