Validation added and Security improved

--- a/views/user/confirmPassword.hbs
+++ b/views/user/confirmPassword.hbs
@@ -6,7 +6,7 @@
            
             <p style="color: red; text-align: center; margin-bottom: 10px"></p>
             <form action="/resetPassword" method="post">
-                <input type="email" placeholder="Re-enter your email" id="email" name="email" value="{{email}}">
+                <input type="email" placeholder="Re-enter your email" id="email" name="email" value="{{email}}" readonly>
                 <input type="password" placeholder="Enter your password" id="password" name="password">
                 <input type="password" placeholder="Confirm your password" id="confirmPassword" name="confirmPassword">
                 <input type="submit" class="button" value="submit">
@@ -14,3 +14,42 @@
         </div>
     </div>
 </section>
+
+<script>
+    document.addEventListener('DOMContentLoaded', function () {
+        document.querySelector('form').addEventListener('submit', formValidate);
+    });
+
+    function formValidate(e) {
+        e.preventDefault();
+
+        var email = document.getElementById('email').value;
+        var password = document.getElementById('password').value;
+        var confirmPassword = document.getElementById('confirmPassword').value;
+
+        if (email == "" || password == "" || confirmPassword == "") {
+            Swal.fire({
+                icon: "error",
+                title: "Oops...",
+                text: "all fields are required!",
+                footer: '<a href="#">Why do I have this issue?</a>'
+            });
+            return false;
+        } else if (password != confirmPassword) {
+            Swal.fire({
+                icon: "error",
+                title: "Oops...",
+                text: "password doesn't match!",
+                footer: '<a href="#">Why do I have this issue?</a>'
+            });
+            return false;
+        }
+
+        e.target.submit();
+        return true;
+    }
+
+
+
+
+</script>
