--- a/views/user/forgotPassword.hbs
+++ b/views/user/forgotPassword.hbs
@@ -45,3 +45,30 @@
 </div>
 </section>
 
+<script>
+    document.addEventListener('DOMContentLoaded', function () {
+        document.querySelector('form').addEventListener('submit', formValidate);
+    });
+
+    function formValidate(e) {
+       
+
+        var email = document.getElementById('email').value;
+        
+
+        if (email == "") {  
+            Swal.fire({
+                icon: "error",
+                title: "Oops...",
+                text: "E-mail address is required!",
+                footer: '<a href="#">Why do I have this issue?</a>'
+            });
+            return false;
+        }
+    }
+
+
+
+
+</script>
+
